--- a/README.org
+++ b/README.org
@@ -39,7 +39,7 @@ is [[https://protesilaos.com/emacs/modus-themes][modus-operandi]].
 The package is not yet available in a package repository, so it must be
 installed manually from this repository via =package-install-file=. Then
 =org-modern= can be enabled manually by invoking =M-x org-modern-mode=. In order to
-enable =org-mode= for all your Org buffers, add =org-modern-mode= to the Org hook
+enable =org-modern= for all your Org buffers, add =org-modern-mode= to the Org hook
 list.
 
 #+begin_src emacs-lisp
