--- a/example.org
+++ b/example.org
@@ -12,7 +12,7 @@ which are styled by =org-modern=.
 **** Fourth level
 ***** Fifth level
 
-* Task Lists [1/3]
+* Task Lists [1/3] [33%]
   - [X] Write =org-modern=
   - [-] Publish =org-modern=
   - [ ] Fix all the bugs
