timestamps: Add support for repeaters

--- a/example.org
+++ b/example.org
@@ -27,7 +27,7 @@ DEADLINE:  <2022-03-01 Tue>
 SCHEDULED: <2022-02-25 10:00>
 RANGE:     [2022-03-01]--[2022-04-01]
 TIMESTAMP: [2022-02-21 Mon 13:00]
-
+REPEATED:  <2022-02-26 Sat .+1d>
 
 * Blocks
 
