--- a/README.org
+++ b/README.org
@@ -3,6 +3,8 @@
 #+language: en
 
 #+html: <a href="https://www.gnu.org/software/emacs/"><img alt="GNU Emacs" src="https://github.com/minad/corfu/blob/screenshots/emacs.svg?raw=true"/></a>
+#+html: <a href="https://melpa.org/#/org-modern"><img alt="MELPA" src="https://melpa.org/packages/org-modern-badge.svg"/></a>
+#+html: <a href="https://stable.melpa.org/#/org-modern"><img alt="MELPA Stable" src="https://stable.melpa.org/packages/org-modern-badge.svg"/></a>
 
 This package implements a "modern" style for your Org buffers using font locking
 and text properties. The package styles headlines, keywords, tables and source
@@ -37,11 +39,10 @@ feature set and mainly adjusts headlines and lists. =org-superstar= relies on
 character composition, while =org-modern= uses text properties, which are
 considered more future-proof.
 
-The package is not yet available in a package repository, so it must be
-installed manually from this repository via =package-install-file=. Then
-=org-modern= can be enabled manually by invoking =M-x org-modern-mode=. In order to
-enable =org-modern= for all your Org buffers, add =org-modern-mode= to the Org mode
-hook list.
+The package is available on MELPA. You can install it with =package-install= if
+you have the MELPA package repository activated. Then =org-modern= can be enabled
+manually in an Org buffer by invoking =M-x org-modern-mode=. In order to enable
+=org-modern= for all your Org buffers, add =org-modern-mode= to the Org mode hooks.
 
 #+begin_src emacs-lisp
 (add-hook 'org-mode-hook #'org-modern-mode)
