--- a/README.org
+++ b/README.org
@@ -18,7 +18,10 @@ elegant theme featured in the screenshot is [[https://protesilaos.com/emacs/modu
 
 This package is still early in its development, so expect bugs and issues in
 particular due to unfortunate interactions of the =variable-pitch= and =fixed-pitch=
-fonts. Bug reports, improvement or style proposals are welcome! Maybe some more
+fonts. You should ensure that your fonts combine harmonically and have
+approximately the same height. Note that =org-indent-mode= interferes with some of
+the style elements applied by =org-modern-mode=, e.g., the block brackets in the
+fringe. Bug reports, improvement or style proposals are welcome! Maybe some more
 Org elements deserve styling or alternative stylings should be offered?
 
 The tag style of =org-modern= is a poor Emacsien's ripoff from Nicholas Rougier's
