Time stamps: Improve coloring of dates with repeater (Fix #22)

--- a/example.org
+++ b/example.org
@@ -28,7 +28,8 @@ SCHEDULED: <2022-02-25 10:00>
 DRANGE:    [2022-03-01]--[2022-04-01]
 TRANGE:    [2022-03-01 Tue 10:42-11:00]
 TIMESTAMP: [2022-02-21 Mon 13:00]
-REPEATED:  <2022-02-26 Sat .+1d>
+DREPEATED:  <2022-02-26 Sat .+1d +3d>
+TREPEATED:  <2022-02-26 Sat 10:00 .+1d>
 
 * Blocks
 
