Handle date ranges

--- a/example.org
+++ b/example.org
@@ -26,6 +26,7 @@ which are styled by =org-modern=.
 DEADLINE:  <2022-03-01 Tue>
 SCHEDULED: <2022-02-25 10:00>
 DRANGE:    [2022-03-01]--[2022-04-01]
+DRANGE:    <2022-03-01>--<2022-04-01>
 TRANGE:    [2022-03-01 Tue 10:42-11:00]
 TIMESTAMP: [2022-02-21 Mon 13:00]
 DREPEATED:  <2022-02-26 Sat .+1d +3d>
