Add org-modern-agenda (Fix #6)
Currently only TODO states are prettified.

--- a/README.org
+++ b/README.org
@@ -56,7 +56,8 @@ invoking =M-x org-modern-mode=. In order to enable =org-modern= for all your Org
 buffers, add =org-modern-mode= to the Org mode hooks.
 
 #+begin_src emacs-lisp
-(add-hook 'org-mode-hook #'org-modern-mode)
+  (add-hook 'org-mode-hook #'org-modern-mode)
+  (add-hook 'org-agenda-finalize-hook 'org-modern-agenda)
 #+end_src
 
 Try the following minimal setup in =emacs -Q= to emulate the looks of the
@@ -97,6 +98,7 @@ screenshot above.
 
   ;; Enable org-modern-mode
   (add-hook 'org-mode-hook 'org-modern-mode)
+  (add-hook 'org-agenda-finalize-hook 'org-modern-agenda)
 #+end_src
 
 * Contributions
