org-modern-agenda: Style tags (Fix #53)

--- a/README.org
+++ b/README.org
@@ -105,6 +105,7 @@ screenshot above.
    org-ellipsis "…"
 
    ;; Agenda styling
+   org-agenda-tags-column 0
    org-agenda-block-separator ?─
    org-agenda-time-grid
    '((daily today require-timed)
