--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -2,6 +2,10 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Development
+
+- Bugfix: Remove line/wrap-prefix if fringe is enabled
+
 * Version 0.10 (2023-07-02)
 
 - Bugfixes.
