--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -2,7 +2,7 @@
 #+author: Daniel Mendler
 #+language: en
 
-* Development
+* Version 1.0 (2023-12-01)
 
 - Bugfix: Remove line/wrap-prefix if fringe is enabled
 
