Fix progress bar, add more examples

--- a/example.org
+++ b/example.org
@@ -120,16 +120,34 @@ radio link
 
 * Progress bars
 
-- progress [1/13]
-- progress [2/13]
-- progress [3/13]
-- progress [4/13]
-- progress [5/13]
-- progress [6/13]
-- progress [7/13]
-- progress [8/13]
-- progress [9/13]
-- progress [10/13]
-- progress [11/13]
-- progress [12/13]
-- progress [13/13]
+- quotient [1/13]
+- quotient [2/13]
+- quotient [3/13]
+- quotient [4/13]
+- quotient [5/13]
+- quotient [6/13]
+- quotient [7/13]
+- quotient [8/13]
+- quotient [9/13]
+- quotient [10/13]
+- quotient [11/13]
+- quotient [12/13]
+- quotient [13/13]
+
+- percent [0%]
+- percent [1%]
+- percent [2%]
+- percent [5%]
+- percent [10%]
+- percent [20%]
+- percent [30%]
+- percent [40%]
+- percent [50%]
+- percent [60%]
+- percent [70%]
+- percent [80%]
+- percent [90%]
+- percent [100%]
+
+- overflow [110%]
+- overflow [20/10]
