--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -2,7 +2,7 @@
 #+author: Daniel Mendler
 #+language: en
 
-* Development
+* Version 1.3 (2024-06-02)
 
 - Add support for heading folding indicators. The option ~org-modern-star~ has
   been changed to accept the values ~fold~, ~replace~ and ~nil~. Set ~org-modern-star~
