Revert "Better fix for tag alignment"
This reverts commit 973c285b30f1d623e8c047f27139625b90202da6.

--- a/README.org
+++ b/README.org
@@ -88,6 +88,7 @@ screenshot above.
  org-pretty-entities t
 
  ;; Agenda styling
+ org-agenda-tags-column 0
  org-agenda-block-separator ?─
  org-agenda-time-grid
  '((daily today require-timed)
