--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,9 +1,11 @@
 #+title: org-modern.el - Changelog
-#+author: Daniel Mendler
+#+author: Daniel Mendler & J.D. Smith
 #+language: en
 
 * Development
 
+- Merged [[https://github.com/jdtsmith/org-modern-indent][org-modern-indent]] as a new extension.
+- Automatically provide code block bracket styling when ~org-indent~ is enabled using ~org-modern-indent-mode~.
 - Add ~org-modern-habit~ face to improve habit progress fontification.
 
 * Version 1.7 (2025-03-11)
