--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -2,7 +2,7 @@
 #+author: Daniel Mendler & J.D. Smith
 #+language: en
 
-* Development
+* Version 2.0 (2020-04-16)
 
 - Merged [[https://github.com/jdtsmith/org-modern-indent][org-modern-indent]] as a new extension: Provides code block bracket
   styling when ~org-indent-mode~ is enabled.
